Maybe fixed cast on mobile

--- a/castMobile.css
+++ b/castMobile.css
@@ -32,7 +32,7 @@ h2 {
     #credits {
         margin-left: auto;
         font-size: 60px;
-        width: 75%;
+        width: 800px;
     }
 
     main ul {
